# obsidian-apis

./: docker-compose.yaml  obsidian_apis.code-workspace
.github/workflows/: fable_scraper.yaml  mimir-orchestrator.yaml  mimir.yaml  mirmir.yaml  wol-api.yaml
fable-scraper/: Dockerfile  pyproject.toml
fable-scraper/app/: all_books.json  const.py  env.py  fable.py  file_api.py  main.py  schemas.py
mimir/: .prettierrc  .template.env  Dockerfile  compose.yaml  next.config.ts  package-lock.json  package.json
mimir-orchestrator/: Dockerfile  pyproject.toml
mimir-orchestrator/app/: db.py  enhancer.py  env.py  exception.py  init_db.py  llm.py  logger.py  main.py  models.py  routes.py  schemas.py  service.py
mimir/src/app/: layout.tsx  not-found.tsx  page.tsx
mimir/src/app/[convoId]/: page.tsx
mimir/src/app/api/chat/: route.ts
mimir/src/app/api/chat/[chatId]/: route.ts
mimir/src/app/api/pc/: route.ts
mimir/src/components/chat/: container.tsx
mimir/src/components/chat/inputs/: container.tsx  input.tsx  sendButton.tsx
mimir/src/components/chat/messages/: container.tsx  messageBubble.tsx
mimir/src/components/nav/: controlButtons.tsx  healthStatus.tsx  navbar.tsx  pcContainer.tsx  powerButton.tsx  trafficLight.tsx
mimir/src/components/nav/chatSelect/: chatSelect.tsx  chatSelectContainer.tsx
mimir/src/utils/: chatApi.ts  local.ts  types.ts  wolApi.ts
pc-controller/: pc-control.service  pyproject.toml
pc-controller/app/: env.py  main.py
wol-api/: .template.env  Dockerfile  pyproject.toml
wol-api/app/: env.py  main.py  pc_controller.py
