[project]
name = "mimir-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]
